--- a/src/components/pages/home/home.scss
+++ b/src/components/pages/home/home.scss
@@ -1,14 +1,69 @@
 .home {
-    padding: 2rem;
-    text-align: center;
+    padding: 4rem 8rem;
 
-    h1 {
-        color: var(--primary-color);
-        margin-bottom: 1rem;
-    }
+    .home-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 50vh;
+        padding: 0 4% 8% 4%;
+        background-color: var(--white);
+        border-radius: 10px;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+        
+        h2 {
+            font-size: 2rem;
+            margin: 40px 0 10px 0;
+            color: var(--color-primary);
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            align-items: center;
+        }
 
-    p {
-        color: var(--text-color);
-        font-size: 1.2rem;
+        h4 {
+            font-size: 1.2rem;
+            margin: 0 0 20px 0;
+            color: var(--color-primary);
+            font-weight: 200;
+        }
+        
+        a {
+            color: var(--color-primary);
+        }
+        
+        hr {
+            margin-top: 80px;
+        }
+        
+        h3 {
+            font-size: 1.8rem;
+            margin: 40px 0 20px 0;
+            color: var(--color-primary);
+        }
+        
+        p {
+            text-align: justify;
+        }
+
+        p.description {
+            width: 80%;
+            max-width: 800px;
+        }
+        
+        span {
+            font-size: large;
+            display: flex;
+            gap: 5px;
+        }
+
+        ul {
+            margin-left: 30px;
+        }
+
+        li {
+            margin-top: 7px;
+            list-style-type: disc;
+        }
     }
 } 
