--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -39,14 +39,14 @@ header {
 
         li {
             list-style: none;
-            margin-right: 50px;
+            margin-right: 30px;
         }
 
         a {
             text-decoration: none;
             color: #fff;
-            font-size: larger;
-            letter-spacing: 2px;
+            font-size: 1rem;
+            letter-spacing: 1px;
             align-items: center;
             display: flex;
         }
