--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,6 +6,9 @@ header {
     background-color: var(--color-secondary);
     padding: 0.5rem;
     color: var(--white);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 
     .header-title {
         display: flex;
