--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,5 +8,6 @@ footer {
         font-size: 1rem;
         font-weight: 200;
         letter-spacing: 2px;
+        color: var(--color-accent-secondary);
     }
 }
