--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -5,4 +5,29 @@ body {
     #root {
         min-height: 100vh;
     }
+
+    .nav-secondary {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+        padding: 0.5rem;
+        background-color: var(--color-accent);
+        gap: 20px;
+        margin-bottom: 30px;
+
+        button {
+            background-color: var(--color-accent-secondary);
+            color: var(--white);
+            border: none;
+            border-radius: 0.5rem;
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: var(--color-tertiary);
+        }
+    }
 }
