--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -62,4 +62,20 @@ header {
             color: var(--color-primary);
         }
     }
+
+    .language-selector {
+        
+        button {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            padding: 0;
+            margin: 0;
+            display: flex;
+
+            &.active {
+                display: none;
+            }
+        }
+    }
 }
