--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -1,9 +1,9 @@
 body {
     background-color: var(--color-bg);
-    min-height: 100vh;
+    min-height: 100dvh;
     
     #root {
-        min-height: 100vh;
+        min-height: 100dvh;
     }
 
     .nav-secondary {
