--- a/src/components/pages/about/about.scss
+++ b/src/components/pages/about/about.scss
@@ -1,6 +1,6 @@
 .about {
     padding: 4rem 8rem;
-    min-height: 100vh;
+    min-height: 100dvh;
 
     .about-container {
         display: flex;
