--- a/src/components/pages/settings/settings.scss
+++ b/src/components/pages/settings/settings.scss
@@ -1,6 +1,6 @@
 .settings {
     padding: 4rem 8rem;
-    min-height: 100vh;
+    min-height: 100dvh;
 
     .settings-container {
         display: flex;
