--- a/src/components/pages/about/about.scss
+++ b/src/components/pages/about/about.scss
@@ -21,5 +21,38 @@
             gap: 10px;
             align-items: center;
         }
+
+        p {
+            margin-top: 20px;
+            max-width: 800px;
+        }
+
+        .about-description {
+            width: 80%;
+        }
+
+        h4 {
+            margin-top: 20px;
+            font-size: 1.2rem;
+            color: var(--color-primary);
+            font-weight: 400;
+        }
+
+        a {
+            color: var(--color-primary);
+            text-decoration: none;
+        }
+
+        .contact-link {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            margin-bottom: 2px;
+            margin-top: 7px;
+        }
+
+        .icon {
+            margin-right: 5px;
+        }
     }
 } 
