--- a/src/components/pages/home/home.scss
+++ b/src/components/pages/home/home.scss
@@ -41,6 +41,7 @@
             font-size: 1.8rem;
             margin: 40px 0 20px 0;
             color: var(--color-primary);
+            font-weight: 400;
         }
         
         p {
@@ -53,7 +54,6 @@
         }
         
         span {
-            font-size: large;
             display: flex;
             gap: 5px;
         }
@@ -65,6 +65,10 @@
         li {
             margin-top: 7px;
             list-style-type: disc;
+        }
+
+        .warning-icon {
+            margin-right: 5px;
         }
     }
 } 
